tests/NormalTests/paczka1/fuzzy1/27888828.err
Error in line 4: f77cB9 A0 98,4
Error in line 5: f77cB9 A0 21,0
Error in line 8: ?A0
Error in line 3: S878 S878 15,9
Error in line 12: S878 A0 96,5
Error in line 13: f77cB9 A0 89,0
Error in line 15: S878 A0 403,4
Error in line 17: 5Au4TT2Ir6o A0 69,3
Error in line 21: QyU A0 80,3
Error in line 11: S878 S919 86,8
Error in line 23: S878 S878 29,6
Error in line 28: 5Au4TT2Ir6o A0 148,3
Error in line 33: 5Au4TT2Ir6o A0 57,8
Error in line 34: 5Au4TT2Ir6o A0 276,3
Error in line 35: QyU A0 186,3
Error in line 37: S878 A0 23,9
Error in line 38: S878 A0 69,6
